--- a/mf-receiver/src/app/app.component.html
+++ b/mf-receiver/src/app/app.component.html
@@ -1,8 +1,10 @@
+<lib-input></lib-input>
 <div>
-    <lib-navbar></lib-navbar>
+  <lib-navbar></lib-navbar>
 </div>
 <h1>hello from {{title}}</h1>
 <lib-button-component></lib-button-component>
 <lib-input></lib-input>
 <lib-custom-comp></lib-custom-comp>
+<lib-datepicker></lib-datepicker>
 <router-outlet></router-outlet>
