--- a/root-config/src/index.ejs
+++ b/root-config/src/index.ejs
@@ -50,9 +50,10 @@
   <script type="systemjs-importmap">
     {
       "imports": {
-        "@serve:single-spa:mf-emitter": "//localhost:4202/main.js",
-        "@serve:single-spa:mf-receiver": "//localhost:4201/main.js",
-        "@serve:single-spa:mf-store": "//localhost:4203/ess-mf-store.js",
+        "@ess:single-spa:mf-emitter": "//localhost:4202/main.js",
+        "@ess:single-spa:mf-receiver": "//localhost:4201/main.js",
+        "@ess:single-spa:mf-nav": "//localhost:4205/main.js",
+        "@ess:single-spa:mf-store": "//localhost:4203/ess-mf-store.js",
         "@ess/root-config": "//localhost:9000/ess-root-config.js"
       }
     }
