adding event to button on library

--- a/mf-receiver/src/app/app.component.html
+++ b/mf-receiver/src/app/app.component.html
@@ -3,7 +3,7 @@
   <lib-navbar></lib-navbar>
 </div>
 <h1>hello from {{title}}</h1>
-<lib-button-component></lib-button-component>
+<lib-button-component [text]='buttonText' [onClick]='onButtonClick'></lib-button-component>
 <lib-input></lib-input>
 <lib-custom-comp></lib-custom-comp>
 <lib-datepicker></lib-datepicker>
