--- a/ui-library/projects/ui-lib/src/lib/atoms/button-component/button-component.component.html
+++ b/ui-library/projects/ui-lib/src/lib/atoms/button-component/button-component.component.html
@@ -1,2 +1,1 @@
-<button class="button" >{{text}}</button>
-<button mat-button>Basic</button>
+<button mat-raised-button color="{{color}}" (click)='onButtonClick($event)'>{{text}}</button>
