--- a/root-config/src/index.ejs
+++ b/root-config/src/index.ejs
@@ -40,8 +40,22 @@
     }
   </script>
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js" as="script">
+  <!-- // Loading angular material scripts -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script>try {
+      console.log("Start Google Font Loading");
 
-  
+      WebFont.load({
+        google: {
+          families: ['Roboto','Material+Icons']
+        }
+      });
+    } catch (error) {
+      console.log("Google Font error");
+      console.log(error);
+    }
+  </script>
   
   <!-- Add your organization's prod import map URL to this script's src  -->
   <!-- <script type="systemjs-importmap" src="/importmap.json"></script> -->
