--- a/mf-receiver/src/app/app.component.html
+++ b/mf-receiver/src/app/app.component.html
@@ -1,11 +1,6 @@
-<lib-input></lib-input>
 <div>
-  <lib-navbar></lib-navbar>
+  <lib-navbar [actions]='actions'></lib-navbar>
 </div>
-<h1>hello from {{title}}</h1>
-<lib-button-component [text]='buttonText' [onClick]='onButtonClick'></lib-button-component>
-<lib-input></lib-input>
-<lib-custom-comp></lib-custom-comp>
-<lib-datepicker></lib-datepicker>
+<h3>Receiver router example</h3>
 <router-outlet></router-outlet>
 
