adding reading auth state from mf-nav

--- a/mf-nav/src/app/app.component.html
+++ b/mf-nav/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div>
+<div class="navContainer">
   <lib-navbar
   [actions]="actions"
   ></lib-navbar>
+  <div class="loginMessage">{{isLogin ? 'User is log in':'User NOT LOG IN' }}</div>
 </div>  
